Fix bug preventing marquee from reinitialising if high contrast mode was the cached theme

--- a/src/scss/components/_marquee-link.scss
+++ b/src/scss/components/_marquee-link.scss
@@ -42,7 +42,7 @@
         will-change: transform;
 
         > span:first-of-type {
-            display: block;
+            display: inline-block;
             padding-left: 2.5ch;
             line-height: 2.9rem;
             text-decoration: underline;
@@ -78,7 +78,8 @@
                 animation-play-state: paused !important;
                 
                 > span:first-of-type {
-                    padding: 0;
+                    padding-left: 1.25ch;
+                    padding-right: 1.25ch;
                     text-shadow: none;
                 }
             }
@@ -110,7 +111,8 @@
                 animation-play-state: paused !important;
                 
                 > span:first-of-type {
-                    padding: 0;
+                    padding-left: 1.25ch;
+                    padding-right: 1.25ch;
                     text-shadow: none;
                 }
             }
